--- a/css/styles.processed.css
+++ b/css/styles.processed.css
@@ -11458,6 +11458,67 @@ iframe.uk-cover {
   height: 100%;
 }
 
+video {
+  background: ivory;
+  margin-left: 20px;
+}
+
+h1 {
+  font-family: 'Sacramento', cursive;
+  color: ivory;
+  font-size: 72pt;
+  display: flex;
+  justify-content: center;
+}
+
+footer {
+  display: flex;
+  color: ivory;
+  justify-content: center;
+  padding-bottom: 10px;
+}
+
+footer a {
+  color: ivory;
+  font-size: 6pt;
+}
+
+article {
+  font-family: 'Quicksand', sans-serif;
+  color: ivory;
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 20px 30px 20px 10px;
+  font-size: 12px;
+  height: 450px;
+}
+
+h2 {
+  font-family: 'Sacramento', cursive;
+  color: ivory;
+  font-size: 36px;
+}
+
+sub {
+  color: hotpink;
+}
+
+article p {
+  font-size: 12px;
+}
+
+div p {
+  margin-top: -50px;
+  color: hotpink;
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 10px;
+  font-size: 12px;
+}
+
+h3 {
+  font-family: 'Sacramento', cursive;
+  color: ivory;
+}
+
 .gallery {
   position: relative;
   top: 100px;
@@ -11497,37 +11558,4 @@ iframe.uk-cover {
 .gallery .active img {
   display: block;
   width: 640px;
-}
-
-video {
-  background: ivory;
-  margin-left: 20px;
-}
-
-h1 {
-  font-family: 'Sacramento', cursive;
-  color: ivory;
-  font-size: 72pt;
-  display: flex;
-  justify-content: center;
-}
-
-footer {
-  display: flex;
-  color: ivory;
-  justify-content: center;
-  padding-bottom: 10px;
-}
-
-footer a {
-  color: ivory;
-  font-size: 6pt;
-}
-
-p {
-  font-family: 'Quicksand', sans-serif;
-  color: ivory;
-  background-color: rgba(255, 255, 255, 0.5);
-  padding: 15px;
-  font-size: 12px;
 }
