--- a/css/styles.scss
+++ b/css/styles.scss
@@ -14,6 +14,66 @@
    height: 100%;
 }
 
+video {
+	background: ivory;
+	margin-left: 20px;
+}
+
+h1 {
+	font-family: 'Sacramento', cursive;
+	color: ivory;
+	font-size: 72pt;
+	display: flex;
+	justify-content: center;
+}
+
+footer {
+	display: flex;
+	color: ivory;
+	justify-content: center;
+	padding-bottom: 10px;
+}
+
+footer a {
+	color: ivory;
+	font-size: 6pt;
+}
+
+article {
+	font-family: 'Quicksand', sans-serif;
+	color: ivory;
+	background-color: rgba(255, 255, 255, 0.5);
+	padding: 20px 30px 20px 10px;
+	font-size: 12px;
+	height: 450px;
+}
+
+h2 {
+	font-family: 'Sacramento', cursive;
+	color: ivory;
+	font-size: 36px;
+}
+
+sub {
+	color: hotpink;
+}
+
+article p {
+	font-size: 12px;
+}
+
+div p {
+	margin-top: -50px;
+	color: hotpink;
+	background-color: rgba(255, 255, 255, 0.5);
+	padding: 10px;
+	font-size: 12px;
+}
+
+h3 {
+	font-family: 'Sacramento', cursive;
+	color: ivory;
+}
 // Code from: Jonathan Gotti https://codepen.io/malko/pen/Eyxep
 
 
@@ -57,36 +117,3 @@
 			display:block;
 			width:640px;
 		}
-
-video {
-	background: ivory;
-	margin-left: 20px;
-}
-
-h1 {
-	font-family: 'Sacramento', cursive;
-	color: ivory;
-	font-size: 72pt;
-	display: flex;
-	justify-content: center;
-}
-
-footer {
-	display: flex;
-	color: ivory;
-	justify-content: center;
-	padding-bottom: 10px;
-}
-
-footer a {
-	color: ivory;
-	font-size: 6pt;
-}
-
-p {
-	font-family: 'Quicksand', sans-serif;
-	color: ivory;
-	background-color: rgba(255, 255, 255, 0.5);
-	padding: 15px;
-	font-size: 12px;
-}
