--- a/css/styles.processed.css
+++ b/css/styles.processed.css
@@ -11468,6 +11468,7 @@ h1 {
   font-size: 72pt;
   display: flex;
   justify-content: center;
+  margin-top: 40px;
 }
 
 footer {
@@ -11486,9 +11487,12 @@ article {
   font-family: 'Quicksand', sans-serif;
   color: ivory;
   background-color: rgba(255, 255, 255, 0.5);
-  padding: 20px 30px 20px 10px;
+  padding: 30px;
   font-size: 12px;
-  height: 450px;
+}
+
+aside {
+  width: 100%;
 }
 
 h2 {
