--- a/css/styles.scss
+++ b/css/styles.scss
@@ -84,6 +84,25 @@ h3 {
 	font-family: 'Sacramento', cursive;
 	color: ivory;
 }
+
+.last li{
+			margin: 350px 150px 150px 100px;
+			width: 300px;
+			height: 250px;
+			list-style-type:none;
+			padding:10px 10px 30px 10px;
+			background:#fff;
+			border:solid black 1pde;
+			transform: rotate(5deg);
+		}
+
+.last img{
+			display:block;
+			width: 400px;
+			height: auto;
+		}
+
+
 // Code from: Jonathan Gotti https://codepen.io/malko/pen/Eyxep
 
 
