--- a/css/styles.processed.css
+++ b/css/styles.processed.css
@@ -11453,13 +11453,18 @@ iframe.uk-cover {
 
 .mejs__container {
   margin-left: 40px;
+  margin-bottom: 125px;
 }
 
 .uk-container {
-  max-width: 90%;
+  max-width: 70%;
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
+}
+
+.uk-column-1-3 {
+  column-gap: 75px;
 }
 
 h1 {
@@ -11529,27 +11534,32 @@ h3 {
   color: ivory;
 }
 
-.last li {
-  margin: 350px 150px 150px 100px;
-  width: 300px;
-  height: 250px;
-  list-style-type: none;
-  padding: 10px 10px 30px 10px;
-  background: #fff;
-  border: solid black 1pde;
-  transform: rotate(5deg);
+video {
+  margin-bottom: 300px;
 }
 
-.last img {
-  display: block;
-  width: 400px;
-  height: auto;
+.last {
+  margin: 100px 100px 100px 200px;
+  height: 550px;
+  list-style-type: none;
+  padding: 10px 10px 15px 10px;
+  background: #fff;
+  border: solid black 1px;
+  transform: rotate(15deg) scale(0.75);
+  position: relative;
+  top: 250px;
+}
+
+.uk-width-1-2 {
+  width: 50%;
+  margin-bottom: 125px;
 }
 
 .gallery {
   position: relative;
   top: 100px;
-  left: 100px;
+  left: 400px;
+  transform: rotate(15deg) scale(1.5);
 }
 
 .gallery li {
@@ -11584,5 +11594,5 @@ h3 {
 
 .gallery .active img {
   display: block;
-  width: 640px;
+  transform: scale(1);
 }
