--- a/css/styles.scss
+++ b/css/styles.scss
@@ -9,13 +9,24 @@
 
 .mejs__container {
     margin-left: 40px;
+	margin-bottom: 125px
 }
 
+// .mejs__mediaelement {
+//     width: 100%;
+//     margin-bottom: 150px;
+//     height: 100%;
+// }
+
 .uk-container {
-	max-width: 90%;
+	max-width: 70%;
 	background-repeat: no-repeat;
    background-size: cover;
    height: 100%;
+}
+
+.uk-column-1-3 {
+	 column-gap: 75px;
 }
 
 h1 {
@@ -85,22 +96,45 @@ h3 {
 	color: ivory;
 }
 
-.last li{
-			margin: 350px 150px 150px 100px;
-			width: 300px;
-			height: 250px;
+// aside, article, hr, .last {
+// 	margin-top: 200px;
+// }
+
+video {
+	margin-bottom: 300px;
+}
+// .uk-grid-margin, .uk-grid+.uk-grid, .uk-grid>.uk-grid-margin {
+// 	margin-top: 200px;
+// }
+
+// hr {
+// 	margin: 0 100px 0 200px;
+// }
+
+.last {
+			margin: 100px 100px 100px 200px;
+			// width: 300px;
+			// top: 200px;
+			height: 550px;
 			list-style-type:none;
-			padding:10px 10px 30px 10px;
+			padding:10px 10px 15px 10px;
 			background:#fff;
-			border:solid black 1pde;
-			transform: rotate(5deg);
+			border:solid black 1px;
+			transform: rotate(15deg) scale(.75);
+	   	position: relative;
+    		top: 250px;
 		}
 
-.last img{
-			display:block;
-			width: 400px;
-			height: auto;
-		}
+.uk-width-1-2 {
+    width: 50%;
+    margin-bottom: 125px;
+}
+
+// .last img{
+// 			display: block;
+// 			// width: 400px;
+// 			height: auto;
+// 		}
 
 
 // Code from: Jonathan Gotti https://codepen.io/malko/pen/Eyxep
@@ -109,7 +143,8 @@ h3 {
 .gallery{
 			position:relative;
 			top:100px;
-			left:100px;
+			left:400px;
+			transform: rotate(15deg) scale(1.5);
 		}
 
 .gallery li{
@@ -144,5 +179,5 @@ h3 {
 
 .gallery .active img{
 			display:block;
-			width:640px;
+			transform: scale(1);
 		}
