--- a/css/styles.scss
+++ b/css/styles.scss
@@ -7,21 +7,7 @@
 // Body Font
 // Score: 0, 0, 0, 2
 
-.mejs__controls {
-	bottom: 225px;
-}
 
-.mejs__container {
-	background: rgba(0, 0, 0, 0);
-	top: 180px;
-	margin-bottom: 100px;
-	// left: -15px;
-	height: 600px;
-}
-
-// .video {
-// 	// top: 2000px;
-// }
 
 h1 {
 	font-family: 'Sacramento', cursive;
@@ -41,7 +27,7 @@ footer {
 
 footer a {
 	color: hotpink;
-	font-size: 6pt;
+	font-size: 10pt;
 }
 
 article {
@@ -50,7 +36,7 @@ article {
 	background-color: rgba(255, 255, 255, 0.5);
 	padding: 30px;
 	font-size: 12px;
-	top: 300px;
+	// top: 300px;
 }
 
 h2 {
@@ -74,100 +60,12 @@ h2 {
 	color: black;
 }
 
-div p {
-	// margin-top: -50px;
-	color: hotpink;
-	background-color: rgba(255, 255, 255, 0.5);
-	padding: 10px;
-	font-size: 24px;
-}
 
 h3 {
 	font-family: 'Sacramento', cursive;
 	color: black;
 }
 
-.hal {
-	transform: scale(1.25);
+.uk-h4, h4 {
+	color: hotpink;
 }
-
-.uk-grid>* {
-	padding: 0;
-	margin: 0;
-}
-
-// li img {
-// 	height: 100%;
-// }
-
-
-// video {
-// 	margin-bottom: 300px;
-// }
-
-// .uk-grid {
-// 	padding: 0;
-// }
-
-// .last {
-// 			margin: 100px 100px 100px 150px;
-// 			// width: 300px;
-// 			// top: 200px;
-// 			height: 550px;
-// 			list-style-type:none;
-// 			padding:20px 20px 25px 20px;
-// 			background:#fff;
-// 			// border:solid black 3px;
-// 			transform: rotate(15deg) scale(.75);
-// 	   	position: relative;
-//     		top: 250px;
-// 		}
-
-
-// Code from: Jonathan Gotti https://codepen.io/malko/pen/Eyxep
-
-
-// .gallery{
-// 			position:relative;
-// 			top:200px;
-// 			left:400px;
-// 			transform: rotate(15deg) scale(1.5);
-// 		}
-
-// .gallery li{
-// 			position:absolute;
-// 			display:block;
-// 			margin:0;
-// 			list-style-type:none;
-// 			padding:10px 10px 30px 10px;
-// 			background:#fff;
-// 			-webkit-box-shadow:2px 2px 4px #333333;
-// 			-webkit-transition: -webkit-transform 0.5s ease;
-// 			-moz-box-shadow:2px 2px 4px #333333;
-// 			-moz-transition: -moz-transform 0.5s ease;
-// 			box-shadow:2px 2px 4px #333333;
-// 			transition: transform 0.5s ease;
-// 		}
-
-// .gallery li.active{
-// 			-webkit-transform:rotate(0deg) !important;
-// 			-moz-transform:rotate(0deg) !important;
-// 			transform:rotate(0deg) !important;
-// 		}
-
-// .gallery img{
-// 			display:block;
-// 			width:80px;
-// 			-webkit-transition: width 0.75s;
-// 			-moz-transition: width 0.75s;
-// 			transition: width 0.75s;
-// 			transform: scale(2.5);
-// 			padding:5px 5px 15px 5px;
-// 			background:#fff;
-// 			// border:solid black .25px;
-// 		}
-
-// .gallery .active img{
-// 			display:block;
-// 			transform: scale(2.5);
-// 		}
