--- a/css/styles.processed.css
+++ b/css/styles.processed.css
@@ -11451,26 +11451,15 @@ iframe.uk-cover {
   display: block;
 }
 
-.mejs__container {
-  margin-left: 40px;
-  margin-bottom: 125px;
-}
-
-.uk-container {
-  max-width: 70%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 100%;
-}
-
-.uk-column-1-3 {
-  column-gap: 75px;
+main {
+  background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1490417/cake.svg") no-repeat bottom;
+  background-size: 1600px;
 }
 
 h1 {
   font-family: 'Sacramento', cursive;
-  color: ivory;
-  font-size: 72pt;
+  color: cornflowerblue;
+  font-size: 144pt;
   display: flex;
   justify-content: center;
   margin-top: 40px;
@@ -11478,42 +11467,38 @@ h1 {
 
 footer {
   display: flex;
-  color: ivory;
+  color: cornflowerblue;
   justify-content: center;
   padding-bottom: 10px;
 }
 
 footer a {
-  color: ivory;
-  font-size: 6pt;
+  color: cornflowerblue;
+  font-size: 10pt;
 }
 
 article {
   font-family: 'Quicksand', sans-serif;
   color: ivory;
-  background-color: rgba(255, 255, 255, 0.5);
   padding: 30px;
   font-size: 12px;
-}
-
-aside {
-  width: 100%;
+  justify-content: center;
 }
 
 h2 {
   font-family: 'Sacramento', cursive;
-  color: ivory;
-  font-size: 36px;
+  color: black;
+  font-size: 72px;
+  justify-content: center;
+  display: flex;
 }
 
 .info {
-  font-size: 10px;
   color: hotpink;
 }
 
 .creator {
-  font-size: 10px;
-  color: ivory;
+  color: cornflowerblue;
 }
 
 .summary {
@@ -11521,79 +11506,16 @@ h2 {
   color: ivory;
 }
 
-div p {
-  margin-top: -50px;
-  color: hotpink;
-  background-color: rgba(255, 255, 255, 0.5);
-  padding: 10px;
-  font-size: 12px;
-}
-
 h3 {
   font-family: 'Sacramento', cursive;
-  color: ivory;
+  color: black;
 }
 
-video {
-  margin-bottom: 300px;
+.uk-h4,
+h4 {
+  color: hotpink;
 }
 
-.last {
-  margin: 100px 100px 100px 150px;
-  height: 550px;
-  list-style-type: none;
-  padding: 20px 20px 25px 20px;
-  background: #fff;
-  transform: rotate(15deg) scale(0.75);
-  position: relative;
-  top: 250px;
-}
-
-.uk-width-1-2 {
-  width: 50%;
-  margin-bottom: 125px;
-}
-
-.gallery {
-  position: relative;
-  top: 200px;
-  left: 400px;
-  transform: rotate(15deg) scale(1.5);
-}
-
-.gallery li {
-  position: absolute;
-  display: block;
-  margin: 0;
-  list-style-type: none;
-  padding: 10px 10px 30px 10px;
-  background: #fff;
-  -webkit-box-shadow: 2px 2px 4px #333333;
-  -webkit-transition: -webkit-transform 0.5s ease;
-  -moz-box-shadow: 2px 2px 4px #333333;
-  -moz-transition: -moz-transform 0.5s ease;
-  box-shadow: 2px 2px 4px #333333;
-  transition: transform 0.5s ease;
-}
-
-.gallery li.active {
-  -webkit-transform: rotate(0deg) !important;
-  -moz-transform: rotate(0deg) !important;
-  transform: rotate(0deg) !important;
-}
-
-.gallery img {
-  display: block;
-  width: 80px;
-  -webkit-transition: width 0.75s;
-  -moz-transition: width 0.75s;
-  transition: width 0.75s;
-  transform: scale(2.5);
-  padding: 5px 5px 15px 5px;
-  background: #fff;
-}
-
-.gallery .active img {
-  display: block;
-  transform: scale(2.5);
+.mejs__container {
+  background: none;
 }
